force-app/main/default/objects/Project__c/fields/ElectricVehicleChargingTotalLoad__c.field-meta.xml
<CustomField>
    <fullName>ElectricVehicleChargingTotalLoad__c</fullName>
    <label>Electric Vehicle Charging Total Load</label>
    <length>255</length>
    <type>Text</type>
</CustomField>