force-app/main/default/objects/Project__c/fields/ElectronicPaymentLink__c.field-meta.xml
<CustomField>
    <fullName>ElectronicPaymentLink__c</fullName>
    <label>Electronic Payment Link</label>
    <type>Url</type>
</CustomField>