force-app/main/default/objects/Project__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address of applicant. Must be a valid email address in the form: jsmith@acme.com. Up to 80 characters are allowed in this field.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>