force-app/main/default/objects/Project__c/fields/EstateName__c.field-meta.xml
<CustomField>
    <fullName>EstateName__c</fullName>
    <label>Estate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>