force-app/main/default/objects/Project__c/fields/EstimatedCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCompletionDate__c</fullName>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>