force-app/main/default/objects/Project__c/fields/ExistingLoadRequirementkW__c.field-meta.xml
<CustomField>
    <fullName>ExistingLoadRequirementkW__c</fullName>
    <label>Existing Load Requirement (kW)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>