force-app/main/default/objects/Project__c/fields/ExistingMeterNumber__c.field-meta.xml
<CustomField>
    <fullName>ExistingMeterNumber__c</fullName>
    <label>Existing Meter Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>