force-app/main/default/objects/Project__c/fields/ExistingNMINumber__c.field-meta.xml
<CustomField>
    <fullName>ExistingNMINumber__c</fullName>
    <label>Existing NMI Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>