force-app/main/default/objects/Project__c/fields/ExpectedDateofOperation__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDateofOperation__c</fullName>
    <label>Expected Date of Operation</label>
    <type>Date</type>
</CustomField>