force-app/main/default/objects/Project__c/fields/ExternalDueDate__c.field-meta.xml
<CustomField>
    <fullName>ExternalDueDate__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>