force-app/main/default/objects/Project__c/fields/FirmOfferAcceptanceDate__c.field-meta.xml
<CustomField>
    <fullName>FirmOfferAcceptanceDate__c</fullName>
    <description>Stores the date when the firm offer was accepted by the customer.</description>
    <label>Firm Offer Acceptance Date</label>
    <type>Date</type>
</CustomField>