force-app/main/default/objects/Project__c/fields/FirmOfferDueDate__c.field-meta.xml
<CustomField>
    <fullName>FirmOfferDueDate__c</fullName>
    <label>Firm Offer Due Date</label>
    <type>Date</type>
</CustomField>