force-app/main/default/objects/Project__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>First name of the applicant, as displayed on the lead edit page. Up to 40 characters are allowed in this field.</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>