force-app/main/default/objects/Project__c/fields/Floor_SlabLargestUnit__c.field-meta.xml
<CustomField>
    <fullName>Floor_SlabLargestUnit__c</fullName>
    <label>Floor/Slab Largest Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>