force-app/main/default/objects/Project__c/fields/Floor_SlabTotalLoad__c.field-meta.xml
<CustomField>
    <fullName>Floor_SlabTotalLoad__c</fullName>
    <label>Floor/Slab Total Load</label>
    <length>255</length>
    <type>Text</type>
</CustomField>