force-app/main/default/objects/Project__c/fields/FunctionalLocation__c.field-meta.xml
<CustomField>
    <fullName>FunctionalLocation__c</fullName>
    <description>Stores the FLOC​ nearest to the installation address</description>
    <label>Functional Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>