force-app/main/default/objects/Project__c/fields/HazardDetails__c.field-meta.xml
<CustomField>
    <fullName>HazardDetails__c</fullName>
    <label>Hazard Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>