force-app/main/default/objects/Project__c/fields/IncreasedElectricitySupplyRequired__c.field-meta.xml
<CustomField>
    <fullName>IncreasedElectricitySupplyRequired__c</fullName>
    <label>Increased Electricity Supply Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>