force-app/main/default/objects/Project__c/fields/InternalDueDate__c.field-meta.xml
<CustomField>
    <fullName>InternalDueDate__c</fullName>
    <label>Internal Due Date</label>
    <type>Date</type>
</CustomField>