force-app/main/default/objects/Project__c/fields/InvoiceDueDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDueDate__c</fullName>
    <label>Invoice Due Date</label>
    <type>Date</type>
</CustomField>