force-app/main/default/objects/Project__c/fields/IsPropertyOwner__c.field-meta.xml
<CustomField>
    <fullName>IsPropertyOwner__c</fullName>
    <description>Property owner of the installation place</description>
    <label>Is Property Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>