force-app/main/default/objects/Project__c/fields/JobType__c.field-meta.xml
<CustomField>
    <fullName>JobType__c</fullName>
    <label>Job Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>