force-app/main/default/objects/Project__c/fields/JointTelecommunicationCableTrenching__c.field-meta.xml
<CustomField>
    <fullName>JointTelecommunicationCableTrenching__c</fullName>
    <label>Joint Telecommunication Cable Trenching</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>