force-app/main/default/objects/Project__c/fields/kVAperLotRequired__c.field-meta.xml
<CustomField>
    <fullName>kVAperLotRequired__c</fullName>
    <label>kVA per Lot Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>