force-app/main/default/objects/Project__c/fields/LargestCoolingUnit__c.field-meta.xml
<CustomField>
    <fullName>LargestCoolingUnit__c</fullName>
    <label>Largest Cooling Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>