force-app/main/default/objects/Project__c/fields/LargestSingleRectifierBatteryUnit__c.field-meta.xml
<CustomField>
    <fullName>LargestSingleRectifierBatteryUnit__c</fullName>
    <label>Largest Single Rectifier Battery Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>