force-app/main/default/objects/Project__c/fields/LastInvoicePaidDate__c.field-meta.xml
<CustomField>
    <fullName>LastInvoicePaidDate__c</fullName>
    <description>Takes the date of the invoice last invoice paid related to the project.</description>
    <label>Last Invoice Paid Date</label>
    <type>Date</type>
</CustomField>