force-app/main/default/objects/Project__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Last name of the applicant, as displayed on the lead edit page. Up to 80 characters are allowed in this field.</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>