force-app/main/default/objects/Project__c/fields/LotsPerHectare__c.field-meta.xml
<CustomField>
    <fullName>LotsPerHectare__c</fullName>
    <label>Lots Per Hectare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>