force-app/main/default/objects/Project__c/fields/Make_a_payment_fx__c.field-meta.xml
<CustomField>
    <fullName>Make_a_payment_fx__c</fullName>
    <formula>$CustomMetadata.TVE_External_URL__mdt.TVE_Make_a_Payment_URL.URL__c</formula>
    <label>Make a payment</label>
    <type>Text</type>
</CustomField>