force-app/main/default/objects/Project__c/fields/MaterialBillingCode1__c.field-meta.xml
<CustomField>
    <fullName>MaterialBillingCode1__c</fullName>
    <label>Material Billing Code 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>