force-app/main/default/objects/Project__c/fields/MaterialBillingCode2__c.field-meta.xml
<CustomField>
    <fullName>MaterialBillingCode2__c</fullName>
    <label>Material Billing Code 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>