force-app/main/default/objects/Project__c/fields/MaximumDemandCalculationtoAS3000__c.field-meta.xml
<CustomField>
    <fullName>MaximumDemandCalculationtoAS3000__c</fullName>
    <label>Maximum Demand Calculation to AS3000</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>