force-app/main/default/objects/Project__c/fields/MobileNumber__c.field-meta.xml
<CustomField>
    <fullName>MobileNumber__c</fullName>
    <description>Stores the mobile number of the persona who is creating the application</description>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>