force-app/main/default/objects/Project__c/fields/Motor_PumpLargestUnit__c.field-meta.xml
<CustomField>
    <fullName>Motor_PumpLargestUnit__c</fullName>
    <label>Motor /PumpLargest Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>