force-app/main/default/objects/Project__c/fields/Motor_PumpTotalLoad__c.field-meta.xml
<CustomField>
    <fullName>Motor_PumpTotalLoad__c</fullName>
    <label>Motor /Pump Total Load</label>
    <length>255</length>
    <type>Text</type>
</CustomField>