force-app/main/default/objects/Project__c/fields/NetworkPlanning__c.field-meta.xml
<CustomField>
    <fullName>NetworkPlanning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Network Planning</label>
    <type>Checkbox</type>
</CustomField>