force-app/main/default/objects/Project__c/fields/NetworkProtectionGroup__c.field-meta.xml
<CustomField>
    <fullName>NetworkProtectionGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in the Support Services &amp; Operations Checklist Flow and not displayed on the page layout</description>
    <label>Network Protection Group</label>
    <type>Checkbox</type>
</CustomField>