force-app/main/default/objects/Project__c/fields/NewLotsCreated__c.field-meta.xml
<CustomField>
    <fullName>NewLotsCreated__c</fullName>
    <label>New Lots Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>