force-app/main/default/objects/Project__c/fields/NumberofAirConditioningUnits__c.field-meta.xml
<CustomField>
    <fullName>NumberofAirConditioningUnits__c</fullName>
    <label>Number of Air Conditioning Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>