force-app/main/default/objects/Project__c/fields/NumberofDwellings__c.field-meta.xml
<CustomField>
    <fullName>NumberofDwellings__c</fullName>
    <label>Number of Dwellings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>