force-app/main/default/objects/Project__c/fields/NumberofElectricHotWaterUnits__c.field-meta.xml
<CustomField>
    <fullName>NumberofElectricHotWaterUnits__c</fullName>
    <label>Number of Electric Hot Water Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>