force-app/main/default/objects/Project__c/fields/NumberofEVChargingUnits__c.field-meta.xml
<CustomField>
    <fullName>NumberofEVChargingUnits__c</fullName>
    <label>Number of EV Charging Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>