force-app/main/default/objects/Project__c/fields/NumberofFloorSlabHeaters__c.field-meta.xml
<CustomField>
    <fullName>NumberofFloorSlabHeaters__c</fullName>
    <label>Number of Floor Slab Heaters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>