force-app/main/default/objects/Project__c/fields/NumberofInstallations__c.field-meta.xml
<CustomField>
    <fullName>NumberofInstallations__c</fullName>
    <label>Number of Installations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>