force-app/main/default/objects/Project__c/fields/NumberofLotsintheDevelopment__c.field-meta.xml
<CustomField>
    <fullName>NumberofLotsintheDevelopment__c</fullName>
    <label>Number of Lots in the Development</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>