force-app/main/default/objects/Project__c/fields/NumberofPolesAffected__c.field-meta.xml
<CustomField>
    <fullName>NumberofPolesAffected__c</fullName>
    <label>Number of Poles Affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>