force-app/main/default/objects/Project__c/fields/NumberOfPumps__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPumps__c</fullName>
    <label>Number Of Pumps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>