force-app/main/default/objects/Project__c/fields/OfferType__c.field-meta.xml
<CustomField>
    <fullName>OfferType__c</fullName>
    <label>Offer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>