force-app/main/default/objects/Project__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is created once the Construction Measure is created on SAP.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Projects (Opportunity)</relationshipLabel>
    <relationshipName>Projects_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>