force-app/main/default/objects/Project__c/fields/OtherAssettoRelocateorRemove__c.field-meta.xml
<CustomField>
    <fullName>OtherAssettoRelocateorRemove__c</fullName>
    <label>Other Asset to Relocate or Remove</label>
    <length>255</length>
    <type>Text</type>
</CustomField>