force-app/main/default/objects/Project__c/fields/OtherElectricalAppliances__c.field-meta.xml
<CustomField>
    <fullName>OtherElectricalAppliances__c</fullName>
    <label>Other Electrical Appliances</label>
    <length>255</length>
    <type>Text</type>
</CustomField>