force-app/main/default/objects/Project__c/fields/OtherReasonForRequest__c.field-meta.xml
<CustomField>
    <fullName>OtherReasonForRequest__c</fullName>
    <label>Other Reason For Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>