force-app/main/default/objects/Project__c/fields/OtherTypeOfInstallation__c.field-meta.xml
<CustomField>
    <fullName>OtherTypeOfInstallation__c</fullName>
    <label>Other Type Of Installation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>