force-app/main/default/objects/Project__c/fields/OtherTypeOfPremises__c.field-meta.xml
<CustomField>
    <fullName>OtherTypeOfPremises__c</fullName>
    <label>Other Type Of Premises</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>