force-app/main/default/objects/Project__c/fields/OwnerABN__c.field-meta.xml
<CustomField>
    <fullName>OwnerABN__c</fullName>
    <description>Australian Business Number
Must receive just numbers</description>
    <label>Owner ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>