force-app/main/default/objects/Project__c/fields/OwnerCity__c.field-meta.xml
<CustomField>
    <fullName>OwnerCity__c</fullName>
    <description>City portion of the property owner&apos;s address, for example, San Francisco. Up to 40 characters are allowed in this field.</description>
    <label>Owner City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>