force-app/main/default/objects/Project__c/fields/OwnerCompany__c.field-meta.xml
<CustomField>
    <fullName>OwnerCompany__c</fullName>
    <description>Name of owner company with which lead is affiliated. Up to 255 characters are allowed in this field.</description>
    <label>Owner Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>