force-app/main/default/objects/Project__c/fields/OwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>OwnerEmail__c</fullName>
    <description>Email address of property owner. Must be a valid email address in the form: jsmith@acme.com. Up to 80 characters are allowed in this field.</description>
    <label>Owner Email</label>
    <type>Email</type>
</CustomField>