force-app/main/default/objects/Project__c/fields/OwnerFirstName__c.field-meta.xml
<CustomField>
    <fullName>OwnerFirstName__c</fullName>
    <description>First name of the property owner, as displayed on the lead edit page. Up to 40 characters are allowed in this field.</description>
    <label>Owner First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>