force-app/main/default/objects/Project__c/fields/OwnerLastName__c.field-meta.xml
<CustomField>
    <fullName>OwnerLastName__c</fullName>
    <description>Last name of the property owner, as displayed on the lead edit page. Up to 80 characters are allowed in this field.</description>
    <label>Owner Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>