force-app/main/default/objects/Project__c/fields/OwnerMobile__c.field-meta.xml
<CustomField>
    <fullName>OwnerMobile__c</fullName>
    <description>Cellular or mobile phone number. Up to 40 characters are allowed in this field.</description>
    <label>Owner Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>