force-app/main/default/objects/Project__c/fields/OwnerPostalCode__c.field-meta.xml
<CustomField>
    <fullName>OwnerPostalCode__c</fullName>
    <label>Owner Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>