force-app/main/default/objects/Project__c/fields/OwnerPreferredContactMethod__c.field-meta.xml
<CustomField>
    <fullName>OwnerPreferredContactMethod__c</fullName>
    <label>Owner Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Both SMS and Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>