force-app/main/default/objects/Project__c/fields/OwnerState__c.field-meta.xml
<CustomField>
    <fullName>OwnerState__c</fullName>
    <description>State or province portion of user’s address. Entry is selected from a picklist of standard values, or entered as text. Up to 80 characters are allowed if the field is a text field.</description>
    <label>Owner State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>