force-app/main/default/objects/Project__c/fields/OwnerStreet__c.field-meta.xml
<CustomField>
    <fullName>OwnerStreet__c</fullName>
    <label>Owner Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>