force-app/main/default/objects/Project__c/fields/OwnerSuburb__c.field-meta.xml
<CustomField>
    <fullName>OwnerSuburb__c</fullName>
    <label>Owner Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>