force-app/main/default/objects/Project__c/fields/PaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>PaymentAmount__c</fullName>
    <label>Payment Amount (in. GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>