force-app/main/default/objects/Project__c/fields/PaymentAmountExGST__c.field-meta.xml
<CustomField>
    <fullName>PaymentAmountExGST__c</fullName>
    <label>Payment Amount (ex. GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>