force-app/main/default/objects/Project__c/fields/PaymentReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>PaymentReferenceNumber__c</fullName>
    <label>Payment Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>