force-app/main/default/objects/Project__c/fields/PendingMyApproval__c.field-meta.xml
<CustomField>
    <fullName>PendingMyApproval__c</fullName>
    <formula>IF( AND(ProjectAssignee__c  =  $User.Id,   ISPICKVAL(ProjectAssigmentStatus__c, &apos;Pending Confirmation&apos;)) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending My Approval</label>
    <type>Checkbox</type>
</CustomField>