force-app/main/default/objects/Project__c/fields/PendingReview__c.field-meta.xml
<CustomField>
    <fullName>PendingReview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used to flag the projects with information pending to review.</description>
    <label>Pending Review?</label>
    <type>Checkbox</type>
</CustomField>