force-app/main/default/objects/Project__c/fields/PhaseToUpgradeTo__c.field-meta.xml
<CustomField>
    <fullName>PhaseToUpgradeTo__c</fullName>
    <label>Phase To Upgrade To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single phase to two phase with/without extra capacity</fullName>
            </value>
            <value>
                <fullName>Single phase to Three phase with/without extra capacity</fullName>
            </value>
            <value>
                <fullName>Two Phase to Three phase with/without extra capacity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>