force-app/main/default/objects/Project__c/fields/PlaningPermitNumber__c.field-meta.xml
<CustomField>
    <fullName>PlaningPermitNumber__c</fullName>
    <label>Planing Permit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>