force-app/main/default/objects/Project__c/fields/PoleNumbers__c.field-meta.xml
<CustomField>
    <fullName>PoleNumbers__c</fullName>
    <label>Pole Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>