force-app/main/default/objects/Project__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>ZIP code or postal code portion of the lead’s address. Up to 20 characters are allowed in this field.</description>
    <label>Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>