force-app/main/default/objects/Project__c/fields/PreliminaryOfferAcceptanceDate__c.field-meta.xml
<CustomField>
    <fullName>PreliminaryOfferAcceptanceDate__c</fullName>
    <description>It is updated when the last task type Prelim Offer is closed as accepted.</description>
    <label>Preliminary Offer Acceptance Date</label>
    <type>Date</type>
</CustomField>