force-app/main/default/objects/Project__c/fields/PreliminaryOfferDueDate__c.field-meta.xml
<CustomField>
    <fullName>PreliminaryOfferDueDate__c</fullName>
    <label>Preliminary Offer Due Date</label>
    <type>Date</type>
</CustomField>