force-app/main/default/objects/Project__c/fields/ProductsUsed__c.field-meta.xml
<CustomField>
    <fullName>ProductsUsed__c</fullName>
    <label>Products Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Air Conditioning</fullName>
            </value>
            <value>
                <fullName>Electric Floor or Storage Heating</fullName>
            </value>
            <value>
                <fullName>Electric Water Heating</fullName>
            </value>
            <value>
                <fullName>Electric Oven</fullName>
            </value>
            <value>
                <fullName>Pump</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>