force-app/main/default/objects/Project__c/fields/ProgressBarDate__c.field-meta.xml
<CustomField>
    <fullName>ProgressBarDate__c</fullName>
    <description>Used to store the last date when the progress bar status field was updated.</description>
    <label>Progress Bar Date</label>
    <type>Date</type>
</CustomField>