force-app/main/default/objects/Project__c/fields/Project_Header__c.field-meta.xml
<CustomField>
    <fullName>Project_Header__c</fullName>
    <description>This field is shown as the header of the record in the compact layout and concatenated the Reference Number (Name) and the Property Address</description>
    <formula>Name &amp; &quot; — &quot; &amp;  ProjectName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Header</label>
    <type>Text</type>
</CustomField>