force-app/main/default/objects/Project__c/fields/ProjectAssigmentStatus__c.field-meta.xml
<CustomField>
    <fullName>ProjectAssigmentStatus__c</fullName>
    <label>Project Assignment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AssigmentStatus</valueSetName>
    </valueSet>
</CustomField>