force-app/main/default/objects/Project__c/fields/ProjectAssignee__c.field-meta.xml
<CustomField>
    <fullName>ProjectAssignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Assignee</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Project Assignee must have &quot;DER TVE-11 Unified User&quot; or &quot;TVE-11 AST Standard User&quot; profile</errorMessage>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>DER TVE-11 Unified User, TVE-11 AST Standard User, DSP User</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectsAssigned</relationshipName>
    <type>Lookup</type>
</CustomField>