force-app/main/default/objects/Project__c/fields/ProjOwnerEmail_fx__c.field-meta.xml
<CustomField>
    <fullName>ProjOwnerEmail_fx__c</fullName>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner Email</label>
    <type>Text</type>
</CustomField>