force-app/main/default/objects/Project__c/fields/ProjOwnerMobPhone_fx__c.field-meta.xml
<CustomField>
    <fullName>ProjOwnerMobPhone_fx__c</fullName>
    <formula>Owner:User.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner Mobile Phone</label>
    <type>Text</type>
</CustomField>