force-app/main/default/objects/Project__c/fields/ProjOwnerName_fx__c.field-meta.xml
<CustomField>
    <fullName>ProjOwnerName_fx__c</fullName>
    <formula>Owner:User.FirstName +&quot; &quot;+ Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner Name</label>
    <type>Text</type>
</CustomField>