force-app/main/default/objects/Project__c/fields/PropertyAccessInstructions__c.field-meta.xml
<CustomField>
    <fullName>PropertyAccessInstructions__c</fullName>
    <label>Property Access Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>