force-app/main/default/objects/Project__c/fields/PropertyAdress__c.field-meta.xml
<CustomField>
    <fullName>PropertyAdress__c</fullName>
    <label>Property Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>